--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
+
+@layer base {
+  body {
+    font-family: 'League Spartan', sans-serif;
+  }
+}
