feat: create new game

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -6,3 +6,14 @@
     font-family: 'League Spartan', sans-serif;
   }
 }
+
+/* Order */
+@layer reset, primevue;
+
+/* Reset CSS */
+@layer reset {
+    button,
+    input {
+        /* CSS to Reset */
+    }
+}
